// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userRolesRepository read operations getAllUsersAndRoles returns expected snapshot 1`] = `
Array [
  Object {
    "catalogueRole": "user",
    "dataManager": false,
    "instanceAdmin": false,
    "projectRoles": Array [
      Object {
        "projectKey": "project 1",
        "role": "admin",
      },
      Object {
        "projectKey": "project 2",
        "role": "user",
      },
    ],
    "userId": "uid1",
    "userName": "user1",
    "verified": true,
  },
  Object {
    "catalogueRole": "publisher",
    "dataManager": true,
    "instanceAdmin": true,
    "projectRoles": Array [
      Object {
        "projectKey": "project 3",
        "role": "admin",
      },
      Object {
        "projectKey": "project 2",
        "role": "viewer",
      },
    ],
    "userId": "uid2",
    "userName": "user2",
    "verified": true,
  },
]
`;

exports[`userRolesRepository read operations getProjectUsers returns expected snapshot 1`] = `
Array [
  Object {
    "catalogueRole": "user",
    "dataManager": false,
    "instanceAdmin": false,
    "projectRoles": Array [
      Object {
        "projectKey": "project 1",
        "role": "admin",
      },
      Object {
        "projectKey": "project 2",
        "role": "user",
      },
    ],
    "userId": "uid1",
    "userName": "user1",
    "verified": true,
  },
  Object {
    "catalogueRole": "publisher",
    "dataManager": true,
    "instanceAdmin": true,
    "projectRoles": Array [
      Object {
        "projectKey": "project 2",
        "role": "viewer",
      },
    ],
    "userId": "uid2",
    "userName": "user2",
    "verified": true,
  },
  Object {
    "catalogueRole": "user",
    "dataManager": false,
    "instanceAdmin": false,
    "projectRoles": Array [
      Object {
        "projectKey": "project 3",
        "role": "admin",
      },
    ],
    "userId": "uid2",
    "userName": "user2",
    "verified": true,
  },
  Object {
    "catalogueRole": "user",
    "dataManager": false,
    "instanceAdmin": false,
    "projectRoles": Array [
      Object {
        "projectKey": "project 2",
        "role": "viewer",
      },
    ],
    "userId": "uid?",
  },
]
`;

exports[`userRolesRepository read operations getUser returns expected snapshot 1`] = `
Object {
  "name": "user1",
  "userId": "uid1",
  "verified": true,
}
`;

exports[`userRolesRepository read operations getUsers returns expected snapshot 1`] = `
Array [
  Object {
    "name": "user1",
    "userId": "uid1",
    "verified": true,
  },
  Object {
    "name": "user2",
    "userId": "uid2",
    "verified": true,
  },
]
`;
